# Tractor

./: .gitignore
Poker/: README.md  package.json  server.js
Poker/public/: app.js  index.html  style.css
tractor/: CMakeLists.txt
tractor/src/: CMakeLists.txt  test.cpp
tractor/src/core/: CMakeLists.txt  card.cpp  card.h  card_group.cpp  card_group.h
tractor/src/gui/: CMakeLists.txt
tractor_js/: package-lock.json
tractor_js/frontend/src/: App.jsx  canvas_卡牌游戏前端（可直接运行）.html  card_game_demo.jsx  card_game_frontend.html
tractor_js/server/: auth.js  gameManager.js  server.js  users.json
tractor_js/server/games/: testGame.js
